# curly-funicular

./: .gitignore  App.xaml  App.xaml.cs  Cargo.toml  KeyboardHook.cs  NativeMethods.cs  README.md  WheelGeometry.cs  WheelSwitcher.csproj  WheelSwitcher.sln  WheelWindow.xaml  WheelWindow.xaml.cs  WindowActivator.cs  WindowTracker.cs  app.manifest  build.rs
.github/workflows/: release.yml
Properties/: AssemblyInfo.cs
WheelSwitcher.Tests/: WheelGeometryTests.cs  WheelSwitcher.Tests.csproj  WindowTrackerTests.cs
installer/: wheel_switcher.iss
src/: keyboard_hook.rs  main.rs  updater.rs  wheel_geometry.rs  wheel_window.rs  window_activator.rs  window_tracker.rs
